[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Asteroid.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/HelpFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Fonts/TimerFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Fonts/Products.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scripts/Actions.gd" type="Script" id=8]
[ext_resource path="res://Assets/Fonts/Log.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assets/Fonts/MoneyFont.tres" type="DynamicFont" id=10]
[ext_resource path="res://Scripts/TekShop.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Compendium.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Intro.gd" type="Script" id=14]

[sub_resource type="Animation" id=10]
resource_name = "IncreaseTime"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.439216, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.815686, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.435294, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 1 )
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=12]
resource_name = "DecreaseMoney"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.717647, 0.294118, 0.294118, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "EndWorld"
length = 1.1
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.9, 0.122275, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:color:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MainScreenDivision" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LeftSide" type="Control" parent="MainScreenDivision"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="LeftSidePanel" type="VBoxContainer" parent="MainScreenDivision/LeftSide"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CurrencyBox" type="HBoxContainer" parent="MainScreenDivision/LeftSide/LeftSidePanel"]
margin_right = 510.0
margin_bottom = 101.0

[node name="Timer" type="Label" parent="MainScreenDivision/LeftSide/LeftSidePanel/CurrencyBox"]
margin_right = 293.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 6 )
text = "10:000"

[node name="TimerAnimation" type="AnimationPlayer" parent="MainScreenDivision/LeftSide/LeftSidePanel/CurrencyBox/Timer"]
anims/IncreaseTime = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="Money" type="Label" parent="MainScreenDivision/LeftSide/LeftSidePanel/CurrencyBox"]
margin_left = 297.0
margin_top = 20.0
margin_right = 510.0
margin_bottom = 81.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
text = "$6969"
align = 2
valign = 1

[node name="MoneyAnimation" type="AnimationPlayer" parent="MainScreenDivision/LeftSide/LeftSidePanel/CurrencyBox/Money"]
anims/DecreaseMoney = SubResource( 12 )
anims/RESET = SubResource( 15 )

[node name="TabContainer" type="TabContainer" parent="MainScreenDivision/LeftSide/LeftSidePanel"]
margin_top = 105.0
margin_right = 510.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_colors/font_color_bg = Color( 0, 0, 0, 1 )
custom_colors/font_color_fg = Color( 1, 0.901961, 0.298039, 1 )
custom_fonts/font = ExtResource( 9 )

[node name="Actions" type="Tabs" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 44.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LeftPanel" type="VBoxContainer" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions/HBoxContainer"]
margin_right = 150.0
margin_bottom = 447.0
rect_min_size = Vector2( 150, 0 )

[node name="Scream" type="Button" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions/HBoxContainer/LeftPanel"]
margin_right = 150.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 7 )
text = "Scream"

[node name="Explore" type="Button" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions/HBoxContainer/LeftPanel"]
visible = false
margin_top = 26.0
margin_right = 150.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 7 )
text = "Explore"

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions/HBoxContainer"]
margin_left = 154.0
margin_right = 502.0
margin_bottom = 447.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions/HBoxContainer/VBoxContainer"]
margin_right = 348.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 7 )
text = "Log"

[node name="LogBG" type="ColorRect" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 348.0
margin_bottom = 447.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.215686, 0.215686, 0.215686, 1 )

[node name="HideLog" type="RichTextLabel" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions/HBoxContainer/VBoxContainer/LogBG"]
margin_left = 4.0
margin_right = 308.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 9 )
text = "asdfasd"

[node name="TekShop" type="Tabs" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/TekShop"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LeftPanel" type="VBoxContainer" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/TekShop/HBoxContainer"]
margin_right = 142.0
margin_bottom = 459.0

[node name="Laptop" type="Button" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/TekShop/HBoxContainer/LeftPanel"]
margin_right = 142.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 7 )
text = "Laptop $1000"

[node name="LogBG" type="ColorRect" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/TekShop/HBoxContainer"]
margin_left = 146.0
margin_right = 585.0
margin_bottom = 459.0
size_flags_horizontal = 3
color = Color( 0.215686, 0.215686, 0.215686, 1 )

[node name="HideLog" type="RichTextLabel" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/TekShop/HBoxContainer/LogBG"]
margin_left = 4.0
margin_right = 308.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 9 )
text = "asdfasd"

[node name="Compendium" type="Tabs" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 12 )
test = NodePath("../../../../RightSide/Asteroid")

[node name="HBoxContainer" type="HBoxContainer" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Compendium"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LogBG" type="ColorRect" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Compendium/HBoxContainer"]
margin_right = 407.0
margin_bottom = 459.0
size_flags_horizontal = 3
color = Color( 0.215686, 0.215686, 0.215686, 1 )

[node name="CompendiumText" type="RichTextLabel" parent="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Compendium/HBoxContainer/LogBG"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 9 )
text = "asdfasd"

[node name="RightSide" parent="MainScreenDivision" instance=ExtResource( 2 )]
pause_mode = 2

[node name="Story" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="Intro" type="Control" parent="Story"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 14 )

[node name="GameCover" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="GameCoverAnimation" type="AnimationPlayer" parent="GameCover"]
anims/EndWorld = SubResource( 16 )
anims/RESET = SubResource( 17 )

[node name="GreyOutScreen" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.694118 )

[node name="StoryPanel" type="ColorRect" parent="GreyOutScreen"]
anchor_top = 0.339
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 103.4
rect_min_size = Vector2( 0, 200 )
mouse_filter = 2

[node name="StoryLabel" type="RichTextLabel" parent="GreyOutScreen/StoryPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
rect_min_size = Vector2( 0, 200 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/mono_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
"
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
"

[node name="Continue" type="Button" parent="GreyOutScreen/StoryPanel"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -267.0
margin_top = -67.0
custom_colors/font_color = Color( 0.454902, 0.780392, 0.396078, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Continue"

[connection signal="pressed" from="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions/HBoxContainer/LeftPanel/Scream" to="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions" method="_on_Scream_pressed"]
[connection signal="pressed" from="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions/HBoxContainer/LeftPanel/Explore" to="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/Actions" method="_on_Search_pressed"]
[connection signal="pressed" from="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/TekShop/HBoxContainer/LeftPanel/Laptop" to="MainScreenDivision/LeftSide/LeftSidePanel/TabContainer/TekShop" method="_on_Laptop_pressed"]
[connection signal="pressed" from="GreyOutScreen/StoryPanel/Continue" to="." method="_on_Continue_pressed"]
